# rust_dockeCompose_cli_app

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  install.sh  notes.md
src/: cli_errors.rs  main.rs  yaml_parser.rs
src/cli_commands_parser/: mod.rs  validate_cli_commands.rs
src/docker/: compose_parser.rs  container_logs.rs  container_status.rs  delete_container.rs  mod.rs  service_sort.rs  start_images_in_container.rs  stop_container.rs
src/logs/: init_logs.rs  mod.rs  service_logs.rs
src/utils/: check_is_git_repo_url.rs  compose_parser.rs  delete_network.rs  mod.rs  service_sort.rs
