[package]
name = "dockyard"
version = "0.1.0"
edition = "2024"
description = "Lightweight container orchestration CLI"
license = "MIT"

[dependencies]
bollard = "0.20.1"
bytes = "1.11.1"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
ctrlc = {version = "3.5.2" , features = ["termination"]} 
dashmap = "6.1.0"
docker-compose-types = "0.22.0"
futures-util = "0.3.32"
git2 = "0.20.4"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = "1.8.1"
indexmap = "2.13.0"
owo-colors = "4.3.0"
serde = {version = "1.0.228" , features = ["derive"]}
serde_yaml = "0.9.33"
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22" , features = ["fmt", "env-filter" , "ansi"]}
openssl = { version = "0.10", features = ["vendored"] }
